--- a/cats/index.html
+++ b/cats/index.html
@@ -13,7 +13,8 @@
   <title>Cats</title>
 </head>
 <body>
-  <ul id="res"></ul>
-  <ul id="res2"></ul>
+  <div class="mil1"><h1>Milestone1</h1><ul id="res"></ul></div>
+  <div class="mil1"><h1>Milestone2</h1><ul id="res2"></ul></div>
+  <div class="mil1"><h1>Milestone3</h1><ul id="res3"></ul></div>
 </body>
 </html>
